# wecom-aibot-python-sdk

./: .env.example  .gitignore  BUGFIX_SUMMARY.md  COMPARISON.md  LICENSE  MANIFEST.in  README.md  pyproject.toml  requirements.txt
aibot/: __init__.py  api.py  client.py  crypto_utils.py  logger.py  message_handler.py  types.py  utils.py  ws.py
examples/: basic.py  comparison_test.py  media_echo.py
tests/: test_media_features.py  test_ws_heartbeat.py
